--- a/.gitignore
+++ b/.gitignore
@@ -14,9 +14,4 @@
 dev/*
 framed.sty
 paper/*cache/*
-paper/figures/
-data/2000/*
-data/all*.rda
-data/x1.csv
-data-raw/swiid9_*
-paper/wrangling_data_files/*
+data/
